--- a/src/Blazaco/Editor/MonacoEditor.cshtml
+++ b/src/Blazaco/Editor/MonacoEditor.cshtml
@@ -6,7 +6,7 @@
 }
 else
 {
-    <div id="@Model.Id" style="width: @(Width)px; height: @(Height)px;"></div>
+    <div id="@Model.Id" style="width: @(Width)px; height: @(Height)px; border: 1px solid #A4A4A4;"></div>
 }
 
 @functions {
