--- a/test/BlazacoTestApp/Shared/NavMenu.cshtml
+++ b/test/BlazacoTestApp/Shared/NavMenu.cshtml
@@ -22,6 +22,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="editor">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Editor
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fullscreen">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Editor Fullscreen
+            </NavLink>
+        </li>
     </ul>
 </div>
 
