--- a/test/BlazacoTestApp/_ViewImports.cshtml
+++ b/test/BlazacoTestApp/_ViewImports.cshtml
@@ -4,3 +4,6 @@
 @using Microsoft.JSInterop
 @using BlazacoTestApp
 @using BlazacoTestApp.Shared
+@using Blazaco.Editor
+@using Blazaco.Editor.Options
+@addTagHelper *,Blazaco
