Updated to Blazor 3.0.0-preview 5.

--- a/samples/BlazacoTestApp/_Imports.razor
+++ b/samples/BlazacoTestApp/_Imports.razor
@@ -4,6 +4,6 @@
 @using Microsoft.JSInterop
 @using BlazacoTestApp
 @using BlazacoTestApp.Shared
+@using Blazaco
 @using Blazaco.Editor
 @using Blazaco.Editor.Options
-@addTagHelper *,Blazaco
