--- a/src/Blazaco/Editor/MonacoEditor.razor
+++ b/src/Blazaco/Editor/MonacoEditor.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components
+@using Microsoft.JSInterop
 
 @if (FullScreen)
 {
@@ -10,6 +11,9 @@ else
 }
 
 @functions {
+
+    [Inject]
+    IJSRuntime runtime { get; set; }
 
     [Parameter]
     EditorModel Model { get; set; }
@@ -29,22 +33,22 @@ else
     {
         if (!_alreadyRendered)
         {
-            _alreadyRendered = await BlazacoJSInterop.InitializeEditor(Model);
+            _alreadyRendered = await BlazacoJSInterop.InitializeEditor(runtime, Model);
         }
     }
 
     public async Task<string> GetValue()
     {
-        return await BlazacoJSInterop.GetValue(Model.Id);
+        return await BlazacoJSInterop.GetValue(runtime, Model.Id);
     }
 
     public async Task<bool> SetValue(string newValue)
     {
-        return await BlazacoJSInterop.SetValue(Model.Id, newValue);
+        return await BlazacoJSInterop.SetValue(runtime, Model.Id, newValue);
     }
 
     public async Task<bool> SetTheme(string newTheme)
     {
-        return await BlazacoJSInterop.SetTheme(Model.Id, newTheme);
+        return await BlazacoJSInterop.SetTheme(runtime, Model.Id, newTheme);
     }
 }
