added monaco.layout() interop method

--- a/src/Blazaco/Editor/MonacoEditor.razor
+++ b/src/Blazaco/Editor/MonacoEditor.razor
@@ -51,4 +51,9 @@ else
     {
         return await BlazacoJSInterop.SetTheme(runtime, Model.Id, newTheme);
     }
+
+    public async Task<bool> Layout()
+    {
+        return await BlazacoJSInterop.Layout(runtime, Model.Id);
+    }
 }
