passing div class into MonacoEditor component

--- a/samples/BlazacoTestApp/Pages/Editor-Fullscreen.razor
+++ b/samples/BlazacoTestApp/Pages/Editor-Fullscreen.razor
@@ -1,6 +1,7 @@
 ﻿@page "/fullscreen"
+@using System.Threading
 
-<MonacoEditor ref="_editor" Model="@_editorModel" FullScreen="true" />
+<MonacoEditor class="fullscreen-editor" ref="_editor" Model="@_editorModel" FullScreen="true" />
 
 @functions
 {
@@ -21,6 +22,6 @@
         };
 
         _editorModel = new EditorModel(options);
-        await base.OnAfterRenderAsync();
+        await base.OnInitAsync();
     }
 }
