--- a/src/Blazaco/Editor/MonacoEditor.razor
+++ b/src/Blazaco/Editor/MonacoEditor.razor
@@ -1,14 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components
 @using Microsoft.JSInterop
 
-@if (FullScreen)
-{
-    <div id="@Model.Id" style="width: 100%; height: 100vh; display: flex;"></div>
-}
-else
-{
-    <div id="@Model.Id" style="width: @(Width)px; height: @(Height)px; border: 1px solid #A4A4A4;"></div>
-}
+<div class=@(@class) id="@Model.Id"></div>
 
 @functions {
 
@@ -19,13 +12,7 @@ else
     EditorModel Model { get; set; }
 
     [Parameter]
-    int Width { get; set; } = 800;
-
-    [Parameter]
-    int Height { get; set; } = 600;
-
-    [Parameter]
-    bool FullScreen { get; set; }
+    string @class { get; set; }
 
     private bool _alreadyRendered = false;
 
