fix fullscreen prop

--- a/samples/BlazacoTestApp/Pages/Editor-Fullscreen.razor
+++ b/samples/BlazacoTestApp/Pages/Editor-Fullscreen.razor
@@ -1,7 +1,7 @@
 ﻿@page "/fullscreen"
 @using System.Threading
 
-<MonacoEditor class="fullscreen-editor" ref="_editor" Model="@_editorModel" FullScreen="true" />
+<MonacoEditor class="fullscreen-editor" ref="_editor" Model="@_editorModel" />
 
 @functions
 {
