Updated to work with Blazor 3.0.0 release

--- a/samples/BlazacoTestApp/Pages/Editor-Fullscreen.razor
+++ b/samples/BlazacoTestApp/Pages/Editor-Fullscreen.razor
@@ -1,13 +1,13 @@
 ﻿@page "/fullscreen"
 
-<MonacoEditor ref="_editor" Model="@_editorModel" FullScreen="true" />
+<MonacoEditor @ref="_editor" Model="_editorModel" FullScreen="true" />
 
 @functions
 {
     private EditorModel _editorModel { get; set; }
     private MonacoEditor _editor;
 
-    protected override async Task OnInitAsync()
+    protected override void OnInitialized()
     {
         var options = new EditorOptions()
         {
@@ -21,6 +21,5 @@
         };
 
         _editorModel = new EditorModel(options);
-        await base.OnAfterRenderAsync();
     }
 }
