--- a/samples/BlazacoTestApp/Pages/Editor.razor
+++ b/samples/BlazacoTestApp/Pages/Editor.razor
@@ -3,37 +3,31 @@
 <div>
     <div>
         Theme:
-        <select onchange="@ChangeTheme">
+        <select @onchange="ChangeTheme">
             <option value="vs">Visual Studio</option>
             <option value="vs-dark">Visual Studio Dark</option>
             <option value="hc-black">High Contrast Black</option>
         </select>
     </div>
     <div>
-        Value: <input type="text" bind="@Value" style="width: 400px;" /> <button onclick="@SetValue">Set Value</button>
+        Value: <input type="text" @bind="Value" style="width: 400px;" /> <button @onclick="SetValue">Set Value</button>
     </div>
     <div>
-        <button onclick="@GetValue">Get Value</button>
+        <button @onclick="GetValue">Get Value</button>
     </div>
 </div>
 
 <br />
 
-<MonacoEditor ref="_editor" Model="@_editorModel" />
+<MonacoEditor @ref="_editor" Model="_editorModel" />
 
 @functions
 {
     private string Value { get; set; } = "// Try me! Check out Console (F12) for log";
-    private EditorModel _editorModel { get; set; }
+    private EditorModel _editorModel { get; set; } = new EditorModel();
     private MonacoEditor _editor;
 
-    protected override async Task OnInitAsync()
-    {
-        _editorModel = new EditorModel();
-        await base.OnAfterRenderAsync();
-    }
-
-    public async Task ChangeTheme(UIChangeEventArgs e)
+    public async Task ChangeTheme(ChangeEventArgs e)
     {
         Console.WriteLine($"setting theme to: {e.Value.ToString()}");
         await _editor.SetTheme(e.Value.ToString());
