--- a/samples/BlazacoTestApp/Shared/SurveyPrompt.razor
+++ b/samples/BlazacoTestApp/Shared/SurveyPrompt.razor
@@ -1,5 +1,5 @@
 ﻿<div class="alert alert-secondary mt-4" role="alert">
-    <span class="oi oi-pencil mr-2" aria-hidden="true"></span> 
+    <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
     <strong>@Title</strong>
 
     <span class="text-nowrap">
@@ -11,5 +11,5 @@
 
 @functions {
     [Parameter]
-    string Title { get; set; } // Demonstrates how a parent component can supply parameters
+    public string Title { get; set; } // Demonstrates how a parent component can supply parameters
 }
